# vrl-radar

./: CMakeLists.txt  README.md  radar-1.conf  radar.conf  structure.txt
config/: clusterer_config.json  confidence_config.json  config_schema.json  display_config.json  processing_config.json  radar.json  radar_common.json  simulation_config.json  targets_rbs.json  targets_uvd.json
examples/: stream_processing_example.cpp
include/radar/: cluster_processor.h  cluster_tracker.h  config_parser.h  garbling_solver.h  grouping.h  kalman_filter.h  radar_system.h  replies.h  reply_processor.h  simulator.h  stream_grouper.h  track_manager.h  types.h  utils.h
include/vrl/radar/core/: cluster.hpp  cluster_pool.hpp  config.h  config_loader.hpp  filter_types.hpp  logging_config.h  object_pool.hpp  point_buffer.hpp  replies.h  source_visitor.hpp  track.hpp  track_pool.hpp  types.h
include/vrl/radar/processing/: cluster.h  dbscan_clusterer.h  extended_kalman_filter.h  garbling_solver.h  i_clusterer.h  i_tracker_filter.h  kalman_filter.h  legacy_clusterer.h  range_grouper.h  rbs_processor.h  reply_processor.h  tracker.h  unscented_kalman_filter.h  uvd_processor.h
include/vrl/radar/simulation/: simulator.h
include/vrl/radar/utils/: logger.h  utils.h
include/vrl/radar/v2/: grid_config.hpp  grid_index.hpp  kalman_filter.hpp  plot.hpp  plot_pool.hpp  track_manager.hpp  track_pool.hpp
include/vrl/visualization/: radar_player.h
src/: CMakeLists.txt  cluster_processor.cpp  config_parser.cpp  garbling_solver.cpp  garbling_solver_iterative.cpp  garbling_solver_threshold.cpp  grouping.cpp  kalman_filter.cpp  radar_system.cpp  reply_processor.cpp  simulator.cpp  track_manager.cpp  utils.cpp
src/core/: cluster.cpp  cluster_pool.cpp  config.cpp  config_loader.cpp  point_buffer.cpp  track.cpp  track_pool.cpp
src/processing/: cluster.cpp  dbscan_clusterer.cpp  extended_kalman_filter.cpp  garbling_solver.cpp  garbling_solver_iterative.cpp  garbling_solver_threshold.cpp  kalman_filter.cpp  legacy_clusterer.cpp  range_grouper.cpp  rbs_processor.cpp  reply_processor.cpp  tracker.cpp  unscented_kalman_filter.cpp  uvd_processor.cpp
src/simulation/: simulator.cpp
src/utils/: logger.cpp  utils.cpp
src/v2/: grid_index.cpp  kalman_filter.cpp  plot_pool.cpp  track_manager.cpp  track_pool.cpp
tests/: CMakeLists.txt  test_circular_history.cpp  test_cluster.cpp  test_cluster_cleanup.cpp  test_cluster_pool.cpp  test_cluster_pool_full.cpp  test_cluster_processor.cpp  test_cluster_tracker.cpp  test_clusterer.cpp  test_config_loader.cpp  test_dbscan_clusterer.cpp  test_dbscan_clusterer_full.cpp  test_extended_kalman_filter.cpp  test_filter_selection.cpp  test_garbling_solver.cpp  test_grid_index.cpp  test_grouping.cpp  test_integration.cpp  test_integration_full.cpp  test_kalman_filter.cpp  test_object_pool.cpp  test_plot_pool.cpp  test_point_buffer.cpp  test_range_grouper.cpp  test_reply_processor.cpp  test_simulator.cpp  test_stream_grouper.cpp  test_target_report.cpp  test_track_manager.cpp  test_track_pool.cpp  test_tracker_filter.cpp  test_types.cpp  test_unscented_kalman_filter.cpp  test_v2_kalman_filter.cpp
tools/: 1_generate_replies.cpp  2_3_combined.cpp  2_3_combined_v2.cpp  2_3_combined_v2_manual.cpp  2_3_combined_v2_streaming.cpp  2_form_plots.cpp  3_track_processing.cpp  4_radar_player.cpp  CMakeLists.txt  migrate_config.cpp  radar_processor.cpp  radar_viewer.cpp  radar_viewer_1.cpp  radar_viewer_simple.cpp  test_config_parser.cpp
